--- a/index.html
+++ b/index.html
@@ -7,27 +7,16 @@
 
 <body>
   <div class="container">
-    <div class="row justify-content-md-center">
-      <div class="col col-lg-2">
-        1 of 3
+      <div class="row align-items-center">
+        <div class="col">
+          One of three columns
+        </div>
+        <div class="col">
+          One of three columns
+        </div>
+        <div class="col">
+          One of three columns
+        </div>
       </div>
-      <div class="col-md-auto">
-        Variable width content
-      </div>
-      <div class="col col-lg-2">
-        3 of 3
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        1 of 3
-      </div>
-      <div class="col-md-auto">
-        Variable width content
-      </div>
-      <div class="col col-lg-2">
-        3 of 3
-      </div>
-    </div>
   </div>
 </body>
