--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         /*font-family: 'Lora', serif;*/
         background-image: url("http://bbsimg.ngfiles.com/1/25940000/ngbbs57fa2b91df17e.png");
         color: #ffffff;
-        /*width:1px;*/
+        width:100%;
         height:89px;
         position: absolute;
         bottom:200px;
