--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           var dropLeft = randRange(0,1600);
           var dropTop = randRange(-1000,1400);
           randWord();
-          $('.rain').append('<div class="drop" id="drop'+i+'"><img src="http://bbsimg.ngfiles.com/1/25940000/ngbbs57fa2b91df17e.png"></div>');
+          $('.rain').append('<div class="drop" id="drop'+i+'"><img src="brit.png"></div>');
           $('#drop'+i).css('left',dropLeft);
           $('#drop'+i).css('top',dropTop);
         }
