--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
   </head>
 
   <body>
-    <section class="rain"><img src="http://bbsimg.ngfiles.com/1/25940000/ngbbs57fa2b91df17e.png"></section>
+    <section class="rain"><img src="brit.png"></section>
   </body>
 </html>
