--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
   </head>
 
-  <body>
+  <body onload="createRain();>
     <section class="rain"><img src="brit.png"></section>
   </body>
 </html>
