--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
     
     <meta charset="UTF-8">
-    <title>Purple Rain</title>
+    <title>britney invented economics</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript">
