--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   </head>
 
-  <body>
+  <body onload="createRain(0);">
     You want a hot body?<br>You want a Bugatti?<br>You want a Maserati?<br>You want a Lamborghini?<br>Sippin' martinis?<br>
     Look hot in a bikini?<br>You wanna live fancy?<br>Live in a big mansion?<br>Party in France?<br><br>
     <button type="button" onclick="createRain(1);">Yaaas!</button>
